[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "fiberwise"
version = "0.1.0"
description = "FiberWise CLI and platform tools"
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-multipart>=0.0.6",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "pydantic>=1.10.0",
    "watchdog>=3.0.0"
]

[project.scripts]
fiber = "fiberwise.main:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "httpx>=0.24.0"
]
